log
Thu 04 May 2023 01:23:30 AM UTC: 
 tests:  0|5
total_score: 0/70
0ebf4fb
Thu 04 May 2023 01:29:44 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:19: error: unused variable ‘nodito’ [-Werror=unused-variable]
   61 |             Node* nodito = createNode();
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a65407
Thu 04 May 2023 01:36:03 AM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
5d12cf2
